fix tabcontrol overflow

--- a/less/tabcontrol.less
+++ b/less/tabcontrol.less
@@ -2,7 +2,7 @@
 @import (once) "utils";
 
 .tabcontrol {
-	overflow: hidden;
+	//overflow: hidden;
 	position: relative;
 	width: 100%;
 
